Attempt #2 to fix overflow

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -5,10 +5,12 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  overflow: auto;
 }
 
-body { overflow-x: hidden; }
+body {
+  overflow-x: hidden;
+  overflow-y: auto;
+}
 
 html {
   font-size: 24px;
